include/DynamsoftBarcodeReader.h

 /**
 * @defgroup Enum Enumerations
 * @{
 */

 /**
 * @enum BarcodeFormat
 *
 * Describes the barcode types in BarcodeFormat group 1. All the formats can be combined, such as BF_CODE_39 | BF_CODE_128.
 * Note: The barcode format our library will search for is composed of [BarcodeFormat group 1](@ref BarcodeFormat) and [BarcodeFormat group 2](@ref BarcodeFormat_2), so you need to specify the barcode format in group 1 and group 2 individually.
 */
typedef enum BarcodeFormat
{
	/**All supported formats in BarcodeFormat group 1*/
#if defined(_WIN32) || defined(_WIN64)
	BF_ALL = 0xFE3FFFFF,
#else
	BF_ALL = -29360129,
#endif

	/**Combined value of BF_CODABAR, BF_CODE_128, BF_CODE_39, BF_CODE_39_Extended, BF_CODE_93, BF_EAN_13, BF_EAN_8, INDUSTRIAL_25, BF_ITF, BF_UPC_A, BF_UPC_E, BF_MSI_CODE;  */
	BF_ONED = 0x003007FF,

	/**Combined value of BF_GS1_DATABAR_OMNIDIRECTIONAL, BF_GS1_DATABAR_TRUNCATED, BF_GS1_DATABAR_STACKED, BF_GS1_DATABAR_STACKED_OMNIDIRECTIONAL, BF_GS1_DATABAR_EXPANDED, BF_GS1_DATABAR_EXPANDED_STACKED, BF_GS1_DATABAR_LIMITED*/
	BF_GS1_DATABAR = 0x0003F800,

	/**Code 39 */
	BF_CODE_39 = 0x1,

	/**Code 128 */
	BF_CODE_128 = 0x2,

	/**Code 93 */
	BF_CODE_93 = 0x4,

	/**Codabar */
	BF_CODABAR = 0x8,

	/**Interleaved 2 of 5 */
	BF_ITF = 0x10,

	/**EAN-13 */
	BF_EAN_13 = 0x20,

	/**EAN-8 */
	BF_EAN_8 = 0x40,

	/**UPC-A */
	BF_UPC_A = 0x80,

	/**UPC-E */
	BF_UPC_E = 0x100,

	/**Industrial 2 of 5 */
	BF_INDUSTRIAL_25 = 0x200,

	/**CODE39 Extended */
	BF_CODE_39_EXTENDED = 0x400,

	/**GS1 Databar Omnidirectional*/
	BF_GS1_DATABAR_OMNIDIRECTIONAL = 0x800,

	/**GS1 Databar Truncated*/
	BF_GS1_DATABAR_TRUNCATED = 0x1000,

	/**GS1 Databar Stacked*/
	BF_GS1_DATABAR_STACKED = 0x2000,

	/**GS1 Databar Stacked Omnidirectional*/
	BF_GS1_DATABAR_STACKED_OMNIDIRECTIONAL = 0x4000,

	/**GS1 Databar Expanded*/
	BF_GS1_DATABAR_EXPANDED = 0x8000,

	/**GS1 Databar Expaned Stacked*/
	BF_GS1_DATABAR_EXPANDED_STACKED = 0x10000,

	/**GS1 Databar Limited*/
	BF_GS1_DATABAR_LIMITED = 0x20000,

	/**Patch code. */
	BF_PATCHCODE = 0x00040000,

	/**PDF417 */
	BF_PDF417 = 0x02000000,

	/**QRCode */
	BF_QR_CODE = 0x04000000,

	/**DataMatrix */
	BF_DATAMATRIX = 0x08000000,

	/**AZTEC */
	BF_AZTEC = 0x10000000,

	/**MAXICODE */
	BF_MAXICODE = 0x20000000,

	/**Micro QR Code*/
	BF_MICRO_QR = 0x40000000,

	/**Micro PDF417*/
	BF_MICRO_PDF417 = 0x00080000,

	/**GS1 Composite Code*/
#if defined(_WIN32) || defined(_WIN64)
	BF_GS1_COMPOSITE = 0x80000000,
#else
	BF_GS1_COMPOSITE = -2147483648,
#endif

	/**MSI Code*/
	BF_MSI_CODE = 0x100000,

	/*Code 11*/
	BF_CODE_11 = 0x200000,

	/**No barcode format in BarcodeFormat group 1*/
	BF_NULL = 0x00

}BarcodeFormat;
/**
* @enum BarcodeFormat_2
*
* Describes the barcode types in BarcodeFormat group 2.
* Note: The barcode format our library will search for is composed of [BarcodeFormat group 1](@ref BarcodeFormat) and [BarcodeFormat group 2](@ref BarcodeFormat_2), so you need to specify the barcode format in group 1 and group 2 individually.
*/
typedef enum BarcodeFormat_2
{
	/**No barcode format in BarcodeFormat group 2*/
	BF2_NULL = 0x00,

	/**Combined value of BF2_USPSINTELLIGENTMAIL, BF2_POSTNET, BF2_PLANET, BF2_AUSTRALIANPOST, BF2_RM4SCC.*/
	BF2_POSTALCODE = 0x01F00000,

	/**Nonstandard barcode */
	BF2_NONSTANDARD_BARCODE = 0x01,

	/**USPS Intelligent Mail.*/
	BF2_USPSINTELLIGENTMAIL = 0x00100000,

	/**Postnet.*/
	BF2_POSTNET = 0x00200000,

	/**Planet.*/
	BF2_PLANET = 0x00400000,

	/**Australian Post.*/
	BF2_AUSTRALIANPOST = 0x00800000,

	/**Royal Mail 4-State Customer Barcode.*/
	BF2_RM4SCC = 0x01000000,

	/**DotCode.*/
	BF2_DOTCODE = 0x02,

	/**_PHARMACODE_ONE_TRACK.*/
	BF2_PHARMACODE_ONE_TRACK = 0x04,

	/**PHARMACODE_TWO_TRACK.*/
	BF2_PHARMACODE_TWO_TRACK = 0x08,

	/**PHARMACODE.*/
	BF2_PHARMACODE = 0x0C
}BarcodeFormat_2;
/**
* @enum ResultType
*
* Describes the extended result type.
*/
typedef enum ResultType
{
	/**Specifies the standard text. This means the barcode value. */
	RT_STANDARD_TEXT,

	/**Specifies the raw text. This means the text that includes start/stop characters, check digits, etc. */
	RT_RAW_TEXT,

	/**Specifies all the candidate text. This means all the standard text results decoded from the barcode. */
	RT_CANDIDATE_TEXT,

	/**Specifies the partial text. This means part of the text result decoded from the barcode. */
	RT_PARTIAL_TEXT

}ResultType;
/**
* @enum TerminatePhase
*
* Describes the terminate phase.
*/
typedef enum TerminatePhase
{
	/**Exits the barcode reading algorithm after the region predetection is done. */
	TP_REGION_PREDETECTED = 0x00000001,

	/**Exits the barcode reading algorithm after the region predetection and image pre-processing is done. */
	TP_IMAGE_PREPROCESSED = 0x00000002,

	/**Exits the barcode reading algorithm after the region predetection, image pre-processing, and image binarization are done. */
	TP_IMAGE_BINARIZED = 0x00000004,

	/**Exits the barcode reading algorithm after the region predetection, image pre-processing, image binarization, and barcode localization are done. */
	TP_BARCODE_LOCALIZED = 0x00000008,

	/**Exits the barcode reading algorithm after the region predetection, image pre-processing, image binarization, barcode localization, and barcode type determining are done. */
	TP_BARCODE_TYPE_DETERMINED = 0x00000010,

	/**Exits the barcode reading algorithm after the region predetection, image pre-processing, image binarization, barcode localization, barcode type determining, and barcode recognition are done. */
	TP_BARCODE_RECOGNIZED = 0x00000020

}TerminatePhase;
/**
* @enum ResultCoordinateType
*
* Describes the result coordinate type.
*/
typedef enum ResultCoordinateType
{
	/**Returns the coordinate in pixel value. */
	RCT_PIXEL = 0x01,

	/**Returns the coordinate as a percentage. */
	RCT_PERCENTAGE = 0x02

}ResultCoordinateType;
/**
* @defgroup Struct Struct
* @{
*/

/**
* @defgroup SamplingImageData SamplingImageData
* @{
*/

/**
* Stores the sampling image data.
*
*/
typedef struct tagSamplingImageData
{
	/**The sampling image data in a byte array.*/
	unsigned char* bytes;

	/**The width of the sampling image.*/
	int width;

	/**The height of the sampling image.*/
	int height;
}SamplingImageData;
/**
* @} defgroup CFrameDecodingSettings
*/

/**
* @defgroup ExtendedResult ExtendedResult
* @{
*/
/**
* Stores the extended result.
*
*/
typedef struct tagExtendedResult
{
	/**Extended result type */
	ResultType resultType;

	/**Barcode type in BarcodeFormat group 1 */
	BarcodeFormat barcodeFormat;

	/**Barcode type in BarcodeFormat group 1 as string */
	const char* barcodeFormatString;

	/**Barcode type in BarcodeFormat group 2*/
	BarcodeFormat_2 barcodeFormat_2;

	/**Barcode type in BarcodeFormat group 2 as string */
	const char* barcodeFormatString_2;

	/**The confidence of the result */
	int confidence;

	/**The content in a byte array */
	unsigned char* bytes;

	/**The length of the byte array */
	int bytesLength;

	/**The accompanying text content in a byte array */
	unsigned char* accompanyingTextBytes;

	/**The length of the accompanying text byte array */
	int accompanyingTextBytesLength;

	/**The deformation value */
	int deformation;

	/**One of the following: @ref QRCodeDetails, @ref PDF417Details, @ref DataMatrixDetails, @ref AztecDetails, @ref OneDCodeDetails */
	void* detailedResult;

	/**The sampling image info.*/
	SamplingImageData samplingImage;

	/**The clarity of the barcode zone in percentage.*/
	int clarity;

	/**Reserved memory for struct. The length of this array indicates the size of the memory reserved for this struct. */
	char reserved[40];
}ExtendedResult, *PExtendedResult;
/**
* @} defgroup ExtendedResult
*/

/**
* @defgroup LocalizationResult LocalizationResult
* @{
*/
/**
* Stores the localization result
*
*/
typedef struct tagLocalizationResult
{
	/**The terminate phase of localization result. */
	TerminatePhase terminatePhase;

	/**Barcode type in BarcodeFormat group 1 */
	BarcodeFormat barcodeFormat;

	/**Barcode type in BarcodeFormat group 1 as string */
	const char* barcodeFormatString;

	/**Barcode type in BarcodeFormat group 2*/
	BarcodeFormat_2 barcodeFormat_2;

	/**Barcode type in BarcodeFormat group 2 as string */
	const char* barcodeFormatString_2;

	/**The X coordinate of the left-most point */
	int x1;

	/**The Y coordinate of the left-most point */
	int y1;

	/**The X coordinate of the second point in a clockwise direction */
	int x2;

	/**The Y coordinate of the second point in a clockwise direction */
	int y2;

	/**The X coordinate of the third point in a clockwise direction */
	int x3;

	/**The Y coordinate of the third point in a clockwise direction */
	int y3;

	/**The X coordinate of the fourth point in a clockwise direction */
	int x4;

	/**The Y coordinate of the fourth point in a clockwise direction */
	int y4;

	/**The angle of a barcode. Values range is from 0 to 360. */
	int angle;

	/**The barcode module size (the minimum bar width in pixel) */
	int moduleSize;

	/**The page number the barcode located in. The index is 0-based. */
	int pageNumber;

	/**The region name the barcode located in. */
	const char* regionName;

	/**The document name */
	const char* documentName;

	/**The coordinate type */
	ResultCoordinateType resultCoordinateType;

	/**The accompanying text content in a byte array */
	unsigned char* accompanyingTextBytes;

	/**The length of the accompanying text byte array */
	int accompanyingTextBytesLength;

	/**The confidence of the localization result*/
	int confidence;

	/**Reserved memory for the struct. The length of this array indicates the size of the memory reserved for this struct. */
	char reserved[52];
}LocalizationResult, *PLocalizationResult;
/**
* @} defgroup LocalizationResult
*/

/**
* @defgroup TextResult TextResult
* @{
*/
/**
* Stores the text result.
*
*/
typedef struct tagTextResult
{

	/**Barcode type in BarcodeFormat group 1 */
	BarcodeFormat barcodeFormat;

	/**Barcode type in BarcodeFormat group 1 as string */
	const char* barcodeFormatString;

	/**Barcode type in BarcodeFormat group 2*/
	BarcodeFormat_2 barcodeFormat_2;

	/**Barcode type in BarcodeFormat group 2 as string */
	const char* barcodeFormatString_2;

	/**The barcode text, ends by '\0' */
	const char* barcodeText;

	/**The barcode content in a byte array */
	unsigned char* barcodeBytes;

	/**The length of the byte array */
	int barcodeBytesLength;

	/**The corresponding localization result */
	LocalizationResult* localizationResult;

	/**One of the following: @ref QRCodeDetails, @ref PDF417Details, @ref DataMatrixDetails, @ref AztecDetails, @ref OneDCodeDetails */
	void* detailedResult;

	/**The total count of extended result */
	int resultsCount;

	/**The extended result array */
	PExtendedResult* results;
	
	/**Exception */
	const char* exception;
	
	/**DPM mark */
	int isDPM;

	/**Mirror flag*/
	int isMirrored;
	
	/**Reserved memory for the struct. The length of this array indicates the size of the memory reserved for this struct. */
	char reserved[44];
}TextResult, *PTextResult;
/**
* @} defgroup TextResult
*/

/**
* @defgroup TextResultArray TextResultArray
* @{
*/
/**
* Stores the text result array.
*
*/
typedef struct tagTextResultArray
{
	/**The total count of text result */
	int resultsCount;

	/**The text result array */
	PTextResult *results;
}TextResultArray, *PTextResultArray;
	/**
	 * @}defgroup CGeneral
	 */

	 /**
	 * @defgroup CInitiation Initiation Functions
	 * @{
	 *   APIs for initiating Dynamsoft Barcode Reader SDK.
	 */

	 /**
	  * Creates an instance of Dynamsoft Barcode Reader.
	  *
	  * @return Returns an instance of Dynamsoft Barcode Reader. If failed, returns NULL.
	  *
	  * @par Remarks:
	  *		Partial of the decoding result will be masked with "*" without a valid license key.
	  *
	  */
	DBR_API void* DBR_CreateInstance();
	/**
	 * Destroys an instance of Dynamsoft Barcode Reader.
	 *
	 * @param [in] barcodeReader Handle of the barcode reader instance.
	 *
	 */
	DBR_API void DBR_DestroyInstance(void* barcodeReader);
	/**
	 * Reads product key and activates the SDK.
	 *
	 * @param [in] pLicense The product keys.
	 * @param [in, out] errorMsgBuffer The buffer is allocated by caller and the recommending length is 256. The error message will be copied to the buffer.
	 * @param [in] errorMsgBufferLen The length of allocated buffer.
	 *
	 * @return Returns error code. Returns 0 if the function operates successfully. You can call
	 * 		   DBR_GetErrorString() to get detailed error message.
	 *
	 */
	DBR_API int  DBR_InitLicense(const char* pLicense, char errorMsgBuffer[], const int errorMsgBufferLen);
	/**
	 * @}defgroup CInitiation
	 */


	 /**
	 * @defgroup CDecoding Decoding Functions
	 * @{
	 *   APIs for barcode decoding.
	 */

	 /**
	  * Decodes barcodes in the specified image file.
	  *
	  * @param [in] barcodeReader Handle of the barcode reader instance.
	  * @param [in] pFileName A string defining the file name.
	  * @param [in] pTemplateName The template name.
	  *
	  * @return Returns error code. Returns 0 if the function operates successfully. You can call
	  * 		   DBR_GetErrorString() to get detailed error message.
	  */
	DBR_API int  DBR_DecodeFile(void* barcodeReader, const char* pFileName, const char* pTemplateName);
	/**
	 * @}defgroup CAdvancedSettings
	 */

	 /**
	 * @defgroup CResults Results Functions
	 * @{
	 *   APIs for operating results.
	 */

	 /**
	  * Gets all recognized barcode results.
	  *
	  * @param [in] barcodeReader Handle of the barcode reader instance.
	  * @param [out] pResults Barcode text results returned by last calling function
	  * 				DBR_DecodeFile() / DBR_DecodeFileInMemory() / DBR_DecodeBuffer() / DBR_DecodeBase64String() / DBR_DecodeDIB().
	  * 				The results is allocated by SDK and should be freed by calling function DBR_FreeTextResults.
	  *
	  * @return Returns error code. Returns 0 if the function operates successfully. You can call
	  * 		   DBR_GetErrorString() to get detailed error message.
	  *
	  */
	DBR_API int DBR_GetAllTextResults(void* barcodeReader, TextResultArray **pResults);
	/**
	 * Frees memory allocated for text results.
	 *
	 * @param [in] pResults Text results.
	 *
	 *
	 */
	DBR_API void  DBR_FreeTextResults(TextResultArray **pResults);